fix spacing

--- a/SampleReview.com/ux/review.style.scss
+++ b/SampleReview.com/ux/review.style.scss
@@ -27,14 +27,15 @@ ul.project-details {
     li {
         list-style-type: none;
         font-size: 16pt;
+        margin-bottom: 6pt;
 
         ul {
             padding-left: 0pt;
-            margin-bottom:6pt;
+            margin-bottom: 12pt;
+
             li {
                 font-size: 12pt;
             }
-
         }
     }
 
